@@ -25,6 +25,8 @@ XXX
    - Make popmap Makefile more portable. Pascal Schumacher and Horms
    - Clarify the way that multiple LDAP servers works. Jeremy Rumpf
    - Removed line from man page stating that TLS isn't supported - it is.
+   - Handle excaped characters in IMAP quoted strings correctly.
+     Rob Mueller, Jeremy Howard and Horms
 
 ----------------------------------------------------------------------
 
